--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@ body {
   
   header {
     background-color: #f8f8f8;
-    padding: 20px;
+    
   }
   
   h1 {
@@ -17,6 +17,11 @@ body {
     list-style-type: none;
     padding: 0;
     margin: 0;
+  }
+
+  .navbar{
+    width: auto;
+    height: auto;
   }
   
   nav ul li {
