--- a/style/style.css
+++ b/style/style.css
@@ -1,62 +1,11 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-
-  .navbar {
-    font-size: 80px; /* Altere o valor para o tamanho desejado */
-  }
-  
-  header {
-    background-color: #f8f8f8;
-    
-  }
-
-  .imagem-slideshow {
-    width: 80px; /* Altere o valor para a largura desejada */
-    height: 50px; /* Altere o valor para a altura desejada */
-  }
-
- 
-
-
-  
-  h1 {
-    margin: 0;
-  }
-  
-  nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-
- 
-  
-  nav ul li {
-    display: inline;
-    margin-right: 10px;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-  }
-  
-  section {
-    padding: 20px;
-  }
-  
-  h2 {
-    color: #333;
-  }
-  
-  footer {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-  }
-  
+.navbar{
+  height: 100px;
+}
+.imagem_logo img{
+  margin-left: 10px;
+  right: -1400px;
+  position: relative;
+  display: flex;
+  height: 50px;  
+  width: 60px;
+}
