--- a/style/style_index.css
+++ b/style/style_index.css
@@ -9,9 +9,6 @@ header {
   
 }
 
-h1 {
-}
-
 nav ul {
   list-style-type: none;
   padding: 0;
@@ -62,14 +59,14 @@ h2 {
   width: 60px;
 }
 
-.imagem-slideshow {
+.video-slideshow {
     width: 100%; 
     height: 635px;
     object-fit: fill;
     display: block;
-  }
-  
-    footer {
+}
+
+footer {
     position: fixed;
     bottom: 0;
     background-color: #333;
@@ -78,5 +75,5 @@ h2 {
     margin-top: 0;
     width: 100%;
     height: 25px;
-  }
+}
 
