--- a/style/style_index.css
+++ b/style/style_index.css
@@ -48,13 +48,17 @@ h2 {
 }
 
 .navbar{
-  height: 100px;
+  height: 70px;
+}
+
+.imagem_logo{
+  display: flex;
+  align-items: center;
+  padding-right: 10px;
 }
 .imagem_logo img{
-  margin-left: 10px;
   right: -1400px;
   position: relative;
-  display: flex;
   height: 50px;  
   width: 60px;
 }
