--- a/style/style_sobre_nos.css
+++ b/style/style_sobre_nos.css
@@ -45,16 +45,20 @@ h2 {
 }
 
 .navbar{
-    height: 100px;
-}
-.imagem_logo img{
-    margin-left: 10px;
+    height: 70px;
+  }
+  
+  .imagem_logo{
+    display: flex;
+    align-items: center;
+    padding-right: 10px;
+  }
+  .imagem_logo img{
     right: -1400px;
     position: relative;
-    display: flex;
     height: 50px;  
     width: 60px;
-}
+  }
 
 footer {
     position: fixed;
