--- a/style/style_contatos.css
+++ b/style/style_contatos.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
 }
@@ -13,11 +13,16 @@ nav ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
+
 }
 
 .navbar{
     width: auto;
     height: auto;
+}
+
+.nav-link{
+  color: #af741c;
 }
 
 nav ul li {
@@ -27,12 +32,16 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: #333;
+    color: #333333;
     font-weight: bold;
 }
 
 h2 {
     color: #333;
+}
+
+section {
+  max-height: 865px; 
 }
 
 .slideshow {
@@ -45,7 +54,7 @@ h2 {
 }
 
 .navbar{
-    height: 70px;
+    height: 60px;
   }
   
   .imagem_logo{
@@ -54,7 +63,7 @@ h2 {
     padding-right: 10px;
   }
   .imagem_logo img{
-    right: -1400px;
+    left: 1750px;
     position: relative;
     height: 50px;  
     width: 60px;
@@ -64,36 +73,45 @@ h2 {
     overflow:hidden;
     padding-bottom:56.25%;
     position:relative;
-    height:0;
+    left: 1360px;
+    top: 100px;
 }
 
 .mapa iframe{
-    left:0;
-    top:0;
-    height:50%;
-    width:50%;
-    position:absolute;
+    position:relative;
 }
 
-.texto_contato{
-    text-align: center;
+.texto_podemos_ajudar{
+    text-align: left;
+    position: relative;
+    top:100px;
+    left:320px;
+    color: #ffffff;
+}
+
+.contato{
+  max-height: 865px;
+}
+
+.imagem_fundo {
+  background-image: url('/imagens/bg_2.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  opacity: 0.9;
+  height: 865px;
 }
 
 .contact-card {
     display: flex;
+    text-align: center;
     flex-direction: column;
-    align-items: center;
-    background-color: #f8f8f8;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: relative;
+    color: #fff;
+    left: 600px;
+    top: 70px;
     margin-bottom: 20px;
-  }
-  
-  .contact-info {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
   }
   
   .icon {
@@ -103,7 +121,219 @@ h2 {
   .contact-text {
     font-size: 16px;
   }
+
+  .texto_contacta_nos{
+    position: relative;
+    bottom: 26px;
+  }
+
+  .texto_onde_nos_encontrar{
+    position: relative;
+    top: 10px;
+  }
+
+  .form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    max-width: 350px;
+    background-color: #1d1d1d;
+    padding: 20px;
+    border-radius: 10px;
+    position: relative;
+    bottom: 700px;
+    left: 300px;
+  }
   
+  .message {
+    color: rgba(88, 87, 87, 0.822);
+    font-size: 14px;
+  }
+  
+  .flex {
+    display: flex;
+    width: 100%;
+    gap: 6px;
+  }
+  
+  .form label {
+    position: relative;
+
+  }
+  
+  .form label .input {
+    width: 100%;
+    padding: 10px 10px 20px 10px;
+    outline: 0;
+    border: 1px solid rgba(105, 105, 105, 0.397);
+    border-radius: 5px;
+  }
+  
+  .form label .input + span {
+    position: absolute;
+    left: 10px;
+    top: 15px;
+    color: grey;
+    font-size: 0.9em;
+    cursor: text;
+    transition: 0.3s ease;
+  }
+  
+  .form label .input:placeholder-shown + span {
+    top: 15px;
+    font-size: 0.9em;
+  }
+  
+  .form label .input:focus + span,.form label .input:valid + span {
+    top: 30px;
+    font-size: 0.7em;
+    font-weight: 600;
+  }
+  
+  .form label .input:valid + span {
+    color: green;
+  }
+  
+  .input01 {
+    width: 100%;
+    padding: 10px 10px 20px 10px;
+    outline: 0;
+    border: 1px solid rgba(105, 105, 105, 0.397);
+    border-radius: 5px;
+    max-height: 350px;
+  }
+  
+  .form label .input01 + span {
+    position: absolute;
+    left: 10px;
+    top: 50px;
+    color: grey;
+    font-size: 0.9em;
+    cursor: text;
+    transition: 0.3s ease;
+  }
+  
+  .form label .input01:placeholder-shown + span {
+    top: 40px;
+    font-size: 0.9em;
+  }
+  
+  .form label .input01:focus + span,.form label .input01:valid + span {
+    top: 50px;
+    font-size: 0.7em;
+    font-weight: 600;
+  }
+  
+  .form label .input01:valid + span {
+    color: green;
+  }
+  
+  .fancy {
+    background-color: transparent;
+    border: 2px solid #cacaca;
+    border-radius: 0px;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 390;
+    letter-spacing: 2px;
+    margin: 0;
+    outline: none;
+    overflow: visible;
+    padding: 8px 30px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    text-transform: none;
+    transition: all 0.3s ease-in-out;
+    user-select: none;
+    font-size: 13px;
+  }
+  
+  .fancy::before {
+    content: " ";
+    width: 1.7rem;
+    height: 2px;
+    background: #cacaca;
+    top: 50%;
+    left: 1.5em;
+    position: absolute;
+    transform: translateY(-50%);
+    transform: translateX(230%);
+    transform-origin: center;
+    transition: background 0.3s linear, width 0.3s linear;
+  }
+  
+  .fancy .text {
+    font-size: 1.125em;
+    line-height: 1.33333em;
+    padding-left: 2em;
+    display: block;
+    text-align: left;
+    transition: all 0.3s ease-in-out;
+    text-transform: lowercase;
+    text-decoration: none;
+    color: #818181;
+    transform: translateX(30%);
+  }
+  
+  .fancy .top-key {
+    height: 2px;
+    width: 1.5625rem;
+    top: -2px;
+    left: 0.625rem;
+    position: absolute;
+    background: white;
+    transition: width 0.5s ease-out, left 0.3s ease-out;
+  }
+  
+  .fancy .bottom-key-1 {
+    height: 2px;
+    width: 1.5625rem;
+    right: 1.875rem;
+    bottom: -2px;
+    position: absolute;
+    background: white;
+    transition: width 0.5s ease-out, right 0.3s ease-out;
+  }
+  
+  .fancy .bottom-key-2 {
+    height: 2px;
+    width: 0.625rem;
+    right: 0.625rem;
+    bottom: -2px;
+    position: absolute;
+    background: white;
+    transition: width 0.5s ease-out, right 0.3s ease-out;
+  }
+  
+  .fancy:hover {
+    color: white;
+    background: #cacaca;
+  }
+  
+  .fancy:hover::before {
+    width: 1.5rem;
+    background: white;
+  }
+  
+  .fancy:hover .text {
+    color: white;
+    padding-left: 1.5em;
+  }
+  
+  .fancy:hover .top-key {
+    left: -2px;
+    width: 0px;
+  }
+  
+  .fancy:hover .bottom-key-1,
+   .fancy:hover .bottom-key-2 {
+    right: 0;
+    width: 0;
+  }
+
 footer {
     position: fixed;
     bottom: 0;
