--- a/style/style_index.css
+++ b/style/style_index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   margin: 0;
   padding: 0;
 }
@@ -20,6 +20,10 @@ nav ul {
   height: auto;
 }
 
+.nav-link{
+  color: #af741c;
+}
+
 nav ul li {
   display: inline;
   margin-right: 10px;
@@ -29,9 +33,6 @@ nav ul li a {
   text-decoration: none;
   color: #333;
   font-weight: bold;
-}
-
-section {
 }
 
 h2 {
@@ -48,7 +49,7 @@ h2 {
 }
 
 .navbar{
-  height: 70px;
+  height: 60px;
 }
 
 .imagem_logo{
@@ -57,7 +58,7 @@ h2 {
   padding-right: 10px;
 }
 .imagem_logo img{
-  right: -1400px;
+  left: 1750px;
   position: relative;
   height: 50px;  
   width: 60px;
@@ -65,7 +66,7 @@ h2 {
 
 .video-slideshow {
     width: 100%; 
-    height: 635px;
+    height: 865px;
     object-fit: fill;
     display: block;
 }
