--- a/style/style_sobre_nos.css
+++ b/style/style_sobre_nos.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
 }
@@ -19,6 +19,10 @@ nav ul {
     width: auto;
     height: auto;
 }
+
+.nav-link{
+    color: #af741c;
+  }
 
 nav ul li {
     display: inline;
@@ -45,7 +49,7 @@ h2 {
 }
 
 .navbar{
-    height: 70px;
+    height: 60px;
   }
   
   .imagem_logo{
@@ -54,7 +58,7 @@ h2 {
     padding-right: 10px;
   }
   .imagem_logo img{
-    right: -1400px;
+    left: 1750px;
     position: relative;
     height: 50px;  
     width: 60px;
