--- a/style/style_index.css
+++ b/style/style_index.css
@@ -71,6 +71,43 @@ h2 {
     display: block;
 }
 
+.frase {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  font-size: 22px;
+  font-weight: bold;
+  color: #fff;
+  text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.imagem_fundo_frase {
+  background-image: url('imagens/bg_2.png');
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.imagem_fundo_frase.imagem_fundo_frase-visible {
+  z-index: 1;
+}
+
+
+.frase.fade-in {
+  opacity: 1;
+}
+
+
 footer {
     position: fixed;
     bottom: 0;
@@ -80,5 +117,16 @@ footer {
     margin-top: 0;
     width: 100%;
     height: 25px;
+}
+
+@keyframes slide-in {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
