--- a/style/style_index.css
+++ b/style/style_index.css
@@ -21,12 +21,12 @@ nav ul {
 }
 
 .nav-link{
-  color: #af741c;
+  color: #f5b914;
 }
 
 nav ul li {
   display: inline;
-  margin-right: 10px;
+  margin-left: 10px;
 }
 
 nav ul li a {
@@ -58,7 +58,7 @@ h2 {
   padding-right: 10px;
 }
 .imagem_logo img{
-  left: 1750px;
+  margin-right: 50px;
   position: relative;
   height: 50px;  
   width: 60px;
