--- a/style/style_menus.css
+++ b/style/style_menus.css
@@ -23,12 +23,12 @@ nav ul {
 }
 
 .nav-link{
-  color: #af741c;
+  color: #f5b914;
 }
 
 nav ul li {
     display: inline;
-    margin-right: 10px;
+    margin-left: 10px;
 }
 
 nav ul li a {
@@ -60,7 +60,7 @@ h2 {
     padding-right: 10px;
   }
   .imagem_logo img{
-    left: 1750px;
+    margin-right: 33px;
     position: relative;
     height: 50px;  
     width: 60px;
