--- a/style/style_index.css
+++ b/style/style_index.css
@@ -65,11 +65,13 @@ h2 {
 }
 
 .video-slideshow {
-    width: 100%; 
-    height: 865px;
-    object-fit: fill;
-    display: block;
+  width: 100%; 
+  height: auto; /* Alterando para "auto" para manter a proporção */
+  max-height: 90vh; /* Definindo uma altura máxima de 100% da altura da tela */
+  object-fit: cover; /* Usando "cover" para preencher o espaço disponível */
+  display: block;
 }
+
 
 .frase {
   position: absolute;
@@ -129,4 +131,8 @@ footer {
     transform: translateY(0);
   }
 }
+
+
+
+
 
